--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,21 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 
     // Glide Dependency
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation libs.glide
+    annotationProcessor libs.compiler
+
+    // Navigation Dependency
+    implementation(libs.androidx.navigation.fragment.ktx)
+    implementation(libs.androidx.navigation.ui.ktx)
+
+    // Kotlin_ coroutine dependencies
+    implementation libs.kotlinx.coroutines.core
+    implementation libs.kotlinx.coroutines.android
+
+    // Multidex
+    implementation libs.androidx.multidex
+
+    // Rounded imageView dependency
+    implementation libs.roundedimageview
 
 }
