--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        maven{
+            url = uri("https://plugins.gradle.org/m2/")
+            url = uri("https://mvnrepository.com/artifact/com.makeramen/roundedimageview")
+        }
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.4.1'
+        classpath libs.kotlin.gradle.plugin
+        classpath libs.google.services
     }
 }
 
@@ -16,7 +21,6 @@ plugins {
 }
 
 allprojects {
-
 }
 
 task clean(type: Delete) {
