--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         maven{
             url = uri("https://plugins.gradle.org/m2/")
             url = uri("https://mvnrepository.com/artifact/com.makeramen/roundedimageview")
+            url = "https://dl.bintray.com/kotlin/kotlin-eap"
         }
         google()
         mavenCentral()
