--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,12 @@ android {
 
 dependencies {
 
+    // Importing Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:33.0.0')
+
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
