--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
     }
     dependencies {
         classpath libs.kotlin.gradle.plugin
-        classpath libs.google.services
+        classpath 'com.google.gms:google-services:4.4.1'
     }
 }
 
 plugins {
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.jetbrains.kotlin.android) apply false
-    alias(libs.plugins.google.gms.google.services) apply false
+    id 'com.google.gms.google-services' version '4.4.1' apply false
 }
 
 allprojects {
